# fbrowserhelper

./: .gitignore  Cargo.toml  LICENSE.txt  build.bat  deno-build-scss.ts  deno-build-typescript.js  deno-build-typescript.ts
extension/: background.js  background.ts  manifest.json  messaging.js  messaging.ts
src/: cli.rs  events.rs  install.rs  main.rs  win32.rs
src/utils/: favicon.rs  log.rs  mod.rs  native_messaging.rs  win32.rs
